--- a/_ControllerFirmware/prj.conf
+++ b/_ControllerFirmware/prj.conf
@@ -16,7 +16,10 @@ CONFIG_BT=y
 CONFIG_BT_PERIPHERAL=y
 CONFIG_BT_DEVICE_NAME="DCLK_1"
 
+CONFIG_BT_DEBUG_LOG=y
 CONFIG_BT_SMP=y
+CONFIG_BT_SIGNING=y
+CONFIG_BT_FIXED_PASSKEY=y
 
 #Enable access to flash
 CONFIG_BT_SETTINGS=y
