--- a/_DisplayFirmware/prjcopy.conf
+++ b/_DisplayFirmware/prjcopy.conf
@@ -5,14 +5,23 @@ CONFIG_BT_MAX_CONN=1
 CONFIG_LOG=y
 CONFIG_PRINTK=y
 
+CONFIG_USB_DEVICE_STACK=y
+CONFIG_USB_DEVICE_PRODUCT="DISPLAY_USB"
+CONFIG_USB_DEVICE_PID=0x0004
+CONFIG_USB_DEVICE_INITIALIZE_AT_BOOT=n
 
+CONFIG_SERIAL=y
+CONFIG_CONSOLE=y
+CONFIG_UART_CONSOLE=y
+CONFIG_UART_LINE_CTRL=y
+
+CONFIG_SYS_CLOCK_TICKS_PER_SEC=128
 
 # Enable the BLE stack with GATT Client configuration
 CONFIG_BT=y
 CONFIG_BT_CENTRAL=y
 CONFIG_BT_SMP=y
 CONFIG_BT_GATT_CLIENT=y
-CONFIG_BT_FIXED_PASSKEY=y
 
 # Enable the BLE modules from NCS
 CONFIG_BT_SCAN=y
@@ -21,6 +30,7 @@ CONFIG_BT_SCAN_UUID_CNT=1
 CONFIG_BT_GATT_DM=y
 CONFIG_HEAP_MEM_POOL_SIZE=2048
 
+CONFIG_BT_FIXED_PASSKEY=y
 # This example requires more workqueue stack
 CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=2048
 
