--- a/_DisplayFirmware/prj.conf
+++ b/_DisplayFirmware/prj.conf
@@ -13,6 +13,7 @@ CONFIG_BT_CENTRAL=y
 CONFIG_BT_SMP=y
 CONFIG_BT_GATT_CLIENT=y
 CONFIG_BT_FIXED_PASSKEY=y
+CONFIG_BT_PRIVACY=y
 
 # Enable the BLE modules from NCS
 CONFIG_BT_SCAN=y
