--- a/_ControllerFirmware/prj.conf
+++ b/_ControllerFirmware/prj.conf
@@ -19,7 +19,7 @@ CONFIG_BT_DEVICE_NAME="DCLK_1"
 CONFIG_BT_DEBUG_LOG=y
 CONFIG_BT_SMP=y
 CONFIG_BT_SIGNING=y
-CONFIG_BT_FIXED_PASSKEY=y
+#CONFIG_BT_FIXED_PASSKEY=y
 
 #Enable access to flash
 CONFIG_BT_SETTINGS=y
