--- a/_DisplayFirmware/prj.conf
+++ b/_DisplayFirmware/prj.conf
@@ -12,7 +12,7 @@ CONFIG_BT=y
 CONFIG_BT_CENTRAL=y
 CONFIG_BT_SMP=y
 CONFIG_BT_GATT_CLIENT=y
-CONFIG_BT_FIXED_PASSKEY=y
+#CONFIG_BT_FIXED_PASSKEY=y
 
 # Enable the BLE modules from NCS
 CONFIG_BT_SCAN=y
