Does not work, Saving

--- a/_DisplayFirmware/prj.conf
+++ b/_DisplayFirmware/prj.conf
@@ -1,7 +1,7 @@
-CONFIG_BT_DEVICE_NAME="DCLK_2"
+CONFIG_BT_DEVICE_NAME="DCLK_Display_1"
 
 CONFIG_BT_MAX_CONN=1
-
+CONFIG_BT_DEBUG_LOG=y
 CONFIG_LOG=y
 CONFIG_PRINTK=y
 
@@ -12,7 +12,10 @@ CONFIG_BT=y
 CONFIG_BT_CENTRAL=y
 CONFIG_BT_SMP=y
 CONFIG_BT_GATT_CLIENT=y
+#CONFIG_BT_SIGNING=y
 #CONFIG_BT_FIXED_PASSKEY=y
+
+CONFIG_BT_PRIVACY=y
 
 # Enable the BLE modules from NCS
 CONFIG_BT_SCAN=y
