Connection/Pairing for single device achieved.k

--- a/_DisplayFirmware/prj.conf
+++ b/_DisplayFirmware/prj.conf
@@ -1,6 +1,6 @@
 CONFIG_BT_DEVICE_NAME="DCLK_Display_1"
 
-CONFIG_BT_MAX_CONN=2
+CONFIG_BT_MAX_CONN=1
 CONFIG_BT_DEBUG_LOG=y
 CONFIG_LOG=y
 CONFIG_PRINTK=y
@@ -12,10 +12,12 @@ CONFIG_BT=y
 CONFIG_BT_CENTRAL=y
 CONFIG_BT_SMP=y
 CONFIG_BT_GATT_CLIENT=y
+CONFIG_BT_FILTER_ACCEPT_LIST=y 
 #CONFIG_BT_SIGNING=y
 #CONFIG_BT_FIXED_PASSKEY=y
 
 CONFIG_BT_PRIVACY=y
+CONFIG_BT_BONDABLE=y
 
 # Enable the BLE modules from NCS
 CONFIG_BT_SCAN=y
