--- a/_ControllerFirmware/prj.conf
+++ b/_ControllerFirmware/prj.conf
@@ -18,6 +18,7 @@ CONFIG_BT_DEVICE_NAME="DCLK_Controller_1"
 CONFIG_BT_DEBUG_LOG=y
 CONFIG_BT_SMP=y
 CONFIG_BT_SIGNING=y
+CONFIG_BT_BONDABLE=y
 
 #CONFIG_BT_FIXED_PASSKEY=y
 
