adjusting memory usage to fit in 810

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 _ControllerFirmware/build/
 _ControllerFirmware/build_1/
+_ControllerFirmware/build_810/
 _DisplayFirmware/build/
 _DisplayFirmware/build_1/
