DCLK Service working on custom nrf52810 board

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 _ControllerFirmware/build/
 _ControllerFirmware/build_1/
 _ControllerFirmware/build_810/
+_ControllerFirmware/build_2/
+_ControllerFirmware/build_3/
 _DisplayFirmware/build/
 _DisplayFirmware/build_1/
