--- a/_ControllerFirmware/prj810.conf
+++ b/_ControllerFirmware/prj810.conf
@@ -1,62 +1,58 @@
 #
+# Copyright (c) 2018 Nordic Semiconductor
+#
+# SPDX-License-Identifier: LicenseRef-Nordic-5-Clause
+#
+
+#CLOCK
+CONFIG_CLOCK_CONTROL_NRF_K32SRC_RC=y
+
+
+#DISABLED
+CONFIG_SIZE_OPTIMIZATIONS=y
+CONFIG_I2C=n
+CONFIG_ADC=n
+CONFIG_SPI=n;
+
+#MEMORY
+CONFIG_IDLE_STACK_SIZE=128
+CONFIG_ISR_STACK_SIZE=512
+CONFIG_HEAP_MEM_POOL_SIZE=1024
+
+
+#BLUETOOTH Reduction
+CONFIG_BT_SETTINGS_CCC_LAZY_LOADING=y
+CONFIG_BT_CTLR_ADV_EXT=n
+CONFIG_BT_EXT_ADV=n
+CONFIG_BT_PHY_UPDATE=n
+CONFIG_BT_GATT_SERVICE_CHANGED=n
+
+
+
+CONFIG_BT_RX_STACK_SIZE=1212
+
+CONFIG_MPSL_WORK_STACK_SIZE=512
+
+
+
 
 # Logger module
 CONFIG_LOG=n
 
-# Disable features not needed
-CONFIG_TIMESLICING=n
-CONFIG_MINIMAL_LIBC_MALLOC=n
-CONFIG_ASSERT=y
+
 # Button and LED library
 CONFIG_GPIO=y
-
-
-# Build
-CONFIG_SIZE_OPTIMIZATIONS=y
-
-#Arm
-CONFIG_BT_RX_STACK_SIZE=1024
-CONFIG_BT_HCI_TX_STACK_SIZE_WITH_PROMPT=y
-CONFIG_BT_HCI_TX_STACK_SIZE=640
-CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=1536
-CONFIG_MPSL_WORK_STACK_SIZE=640
-CONFIG_MAIN_STACK_SIZE=1024
-CONFIG_IDLE_STACK_SIZE=128
-CONFIG_ISR_STACK_SIZE=1024
-
 
 # Bluetooth LE
 CONFIG_BT=y
 CONFIG_BT_PERIPHERAL=y
 CONFIG_BT_DEVICE_NAME="DCLK_Controller_1"
 
-CONFIG_BT_DEBUG_LOG=y
 CONFIG_BT_SMP=y
 CONFIG_BT_SIGNING=y
 CONFIG_BT_BONDABLE=y
 
-
-# Disable Bluetooth features not needed
-CONFIG_BT_DEBUG_NONE=y
-CONFIG_BT_ASSERT=n
-CONFIG_BT_DATA_LEN_UPDATE=n
-CONFIG_BT_PHY_UPDATE=n
-CONFIG_BT_GATT_CACHING=n
-CONFIG_BT_GATT_SERVICE_CHANGED=n
-CONFIG_BT_SETTINGS_CCC_LAZY_LOADING=y
-CONFIG_BT_HCI_VS_EXT=n
-
-
-
-# Reduce Bluetooth buffers
-CONFIG_BT_BUF_EVT_DISCARDABLE_COUNT=1
-CONFIG_BT_BUF_EVT_DISCARDABLE_SIZE=43
-CONFIG_BT_BUF_EVT_RX_COUNT=2
-
-CONFIG_BT_CONN_TX_MAX=2
-CONFIG_BT_L2CAP_TX_BUF_COUNT=2
-CONFIG_BT_BUF_ACL_TX_COUNT=3
-CONFIG_BT_BUF_ACL_TX_SIZE=27
+#CONFIG_BT_FIXED_PASSKEY=y
 
 #Enable access to flash
 CONFIG_BT_SETTINGS=y
@@ -73,3 +69,8 @@ CONFIG_BT_PRIVACY=y
 # Increase the number of maximum paired devices
 CONFIG_BT_MAX_PAIRED=5
 
+
+
+# Increase stack size for the main thread and System Workqueue
+CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=2048
+CONFIG_MAIN_STACK_SIZE=2048
