--- a/_ControllerFirmware/prj810.conf
+++ b/_ControllerFirmware/prj810.conf
@@ -9,28 +9,26 @@ CONFIG_CLOCK_CONTROL_NRF_K32SRC_RC=y
 
 
 #DISABLED
-CONFIG_SIZE_OPTIMIZATIONS=y
+
 CONFIG_I2C=n
 CONFIG_ADC=n
-CONFIG_SPI=n;
+CONFIG_SPI=n
+CONFIG_DEBUG=n
 
 #MEMORY
-CONFIG_IDLE_STACK_SIZE=128
-CONFIG_ISR_STACK_SIZE=512
-CONFIG_HEAP_MEM_POOL_SIZE=1024
-
+CONFIG_SIZE_OPTIMIZATIONS=y
+#CONFIG_IDLE_STACK_SIZE=128
+CONFIG_MAIN_STACK_SIZE=1024
+CONFIG_ISR_STACK_SIZE=1024
 
 #BLUETOOTH Reduction
-CONFIG_BT_SETTINGS_CCC_LAZY_LOADING=y
-CONFIG_BT_CTLR_ADV_EXT=n
-CONFIG_BT_EXT_ADV=n
+
 CONFIG_BT_PHY_UPDATE=n
 CONFIG_BT_GATT_SERVICE_CHANGED=n
 
 
 
-CONFIG_BT_RX_STACK_SIZE=1212
-
+CONFIG_BT_RX_STACK_SIZE=1512
 CONFIG_MPSL_WORK_STACK_SIZE=512
 
 
@@ -44,9 +42,15 @@ CONFIG_LOG=n
 CONFIG_GPIO=y
 
 # Bluetooth LE
+
+
 CONFIG_BT=y
 CONFIG_BT_PERIPHERAL=y
 CONFIG_BT_DEVICE_NAME="DCLK_Controller_1"
+
+CONFIG_BT_SETTINGS_CCC_LAZY_LOADING=y
+CONFIG_BT_CTLR_ADV_EXT=y
+CONFIG_BT_EXT_ADV=y
 
 CONFIG_BT_SMP=y
 CONFIG_BT_SIGNING=y
@@ -67,10 +71,5 @@ CONFIG_BT_FILTER_ACCEPT_LIST=y
 CONFIG_BT_PRIVACY=y
 
 # Increase the number of maximum paired devices
-CONFIG_BT_MAX_PAIRED=5
+CONFIG_BT_MAX_PAIRED=2
 
-
-
-# Increase stack size for the main thread and System Workqueue
-CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=2048
-CONFIG_MAIN_STACK_SIZE=2048
