recovered some RAM space by reducing work and rx stacks

--- a/_ControllerFirmware/prj810.conf
+++ b/_ControllerFirmware/prj810.conf
@@ -9,41 +9,37 @@ CONFIG_CLOCK_CONTROL_NRF_K32SRC_RC=y
 
 
 #DISABLED
-
 CONFIG_I2C=n
 CONFIG_ADC=n
-CONFIG_SPI=n
+CONFIG_SPI=y
 CONFIG_DEBUG=n
 
 #MEMORY
 CONFIG_SIZE_OPTIMIZATIONS=y
-#CONFIG_IDLE_STACK_SIZE=128
-CONFIG_MAIN_STACK_SIZE=1024
+CONFIG_BT_HCI=n
+
+#CONFIG_MAIN_STACK_SIZE=1024
 CONFIG_ISR_STACK_SIZE=1024
 
 #BLUETOOTH Reduction
-
 CONFIG_BT_PHY_UPDATE=n
 CONFIG_BT_GATT_SERVICE_CHANGED=n
 
 
-
-CONFIG_BT_RX_STACK_SIZE=1512
+CONFIG_BT_RX_STACK_SIZE=1024
+CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=1024
+CONFIG_BT_HCI_TX_STACK_SIZE=1024
 CONFIG_MPSL_WORK_STACK_SIZE=512
-
 
 
 
 # Logger module
 CONFIG_LOG=n
 
-
 # Button and LED library
 CONFIG_GPIO=y
 
 # Bluetooth LE
-
-
 CONFIG_BT=y
 CONFIG_BT_PERIPHERAL=y
 CONFIG_BT_DEVICE_NAME="DCLK_Controller_1"
@@ -60,9 +56,9 @@ CONFIG_BT_BONDABLE=y
 
 #Enable access to flash
 CONFIG_BT_SETTINGS=y
-CONFIG_FLASH=y
-CONFIG_FLASH_PAGE_LAYOUT=y
-CONFIG_FLASH_MAP=y
+#CONFIG_FLASH=y
+#CONFIG_FLASH_PAGE_LAYOUT=y
+#CONFIG_FLASH_MAP=y
 CONFIG_NVS=y
 CONFIG_SETTINGS=y
 
