--- a/_ControllerFirmware/prj.conf
+++ b/_ControllerFirmware/prj.conf
@@ -4,37 +4,47 @@
 # SPDX-License-Identifier: LicenseRef-Nordic-5-Clause
 #
 
-#CLOCK
-CONFIG_CLOCK_CONTROL_NRF_K32SRC_RC=y
-
-
 #DISABLED
-CONFIG_I2C=n
-CONFIG_ADC=n
-CONFIG_SPI=y
-CONFIG_DEBUG=n
+
+CONFIG_ADC=y
+CONFIG_SPI=n
+CONFIG_DEBUG=y
+
+#DISPLAY
+
+
+
+
+CONFIG_I2C=y
+CONFIG_DISPLAY=y
+CONFIG_SSD1306=y
+CONFIG_SSD1306_DEFAULT=y
+CONFIG_SSD1306_DEFAULT_CONTRAST=128
+CONFIG_CHARACTER_FRAMEBUFFER=y
+CONFIG_HEAP_MEM_POOL_SIZE=1024
+
 
 #MEMORY
-CONFIG_SIZE_OPTIMIZATIONS=y
-CONFIG_BT_HCI=n
+# CONFIG_SIZE_OPTIMIZATIONS=y
+# CONFIG_BT_HCI=n
 
 #CONFIG_MAIN_STACK_SIZE=1024
-CONFIG_ISR_STACK_SIZE=1024
+# CONFIG_ISR_STACK_SIZE=1024
 
 #BLUETOOTH Reduction
-CONFIG_BT_PHY_UPDATE=n
-CONFIG_BT_GATT_SERVICE_CHANGED=n
+# CONFIG_BT_PHY_UPDATE=n
+# CONFIG_BT_GATT_SERVICE_CHANGED=n
 
 
-CONFIG_BT_RX_STACK_SIZE=1024
-CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=1024
-CONFIG_BT_HCI_TX_STACK_SIZE=1024
-CONFIG_MPSL_WORK_STACK_SIZE=512
+# CONFIG_BT_RX_STACK_SIZE=1024
+# CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=1024
+# CONFIG_BT_HCI_TX_STACK_SIZE=1024
+# CONFIG_MPSL_WORK_STACK_SIZE=512
 
 
 
 # Logger module
-CONFIG_LOG=n
+CONFIG_LOG=y
 
 # Button and LED library
 CONFIG_GPIO=y
@@ -56,9 +66,9 @@ CONFIG_BT_BONDABLE=y
 
 #Enable access to flash
 CONFIG_BT_SETTINGS=y
-#CONFIG_FLASH=y
-#CONFIG_FLASH_PAGE_LAYOUT=y
-#CONFIG_FLASH_MAP=y
+CONFIG_FLASH=y
+CONFIG_FLASH_PAGE_LAYOUT=y
+CONFIG_FLASH_MAP=y
 CONFIG_NVS=y
 CONFIG_SETTINGS=y
 
@@ -67,5 +77,5 @@ CONFIG_BT_FILTER_ACCEPT_LIST=y
 CONFIG_BT_PRIVACY=y
 
 # Increase the number of maximum paired devices
-CONFIG_BT_MAX_PAIRED=2
+CONFIG_BT_MAX_PAIRED=5
 
