--- a/_ControllerFirmware/prj.conf
+++ b/_ControllerFirmware/prj.conf
@@ -46,8 +46,12 @@ CONFIG_HEAP_MEM_POOL_SIZE=1024
 # Logger module
 CONFIG_LOG=y
 
-# Button and LED library
+# BUTTONS and GPIO
 CONFIG_GPIO=y
+
+CONFIG_PWM=y
+CONFIG_PWM_LOG_LEVEL_DBG=y
+
 
 # Bluetooth LE
 CONFIG_BT=y
