--- a/_DisplayFirmware/prj.conf
+++ b/_DisplayFirmware/prj.conf
@@ -39,3 +39,10 @@ CONFIG_SETTINGS=y
 
 
 
+
+CONFIG_LED_STRIP=y
+CONFIG_LED_STRIP_LOG_LEVEL_DBG=y
+CONFIG_WS2812_STRIP=y
+CONFIG_SPI=y
+CONFIG_WS2812_STRIP_SPI=y
+
