--- a/_DisplayFirmware/CMakeLists.txt
+++ b/_DisplayFirmware/CMakeLists.txt
@@ -3,4 +3,4 @@ find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
 
 project(BT_DISPLAY)
 
-target_sources(app PRIVATE src/main.c src/DCLK_client.c src/Interface.c)
+target_sources(app PRIVATE src/main.c src/DCLK_client.c src/Interface_display.c)
