--- a/_ControllerFirmware/.vscode/settings.json
+++ b/_ControllerFirmware/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
-    "nrf-connect.applications": [],
+    "nrf-connect.applications": [
+        "${workspaceFolder}"
+    ],
     "files.associations": {
         "dclk.h": "c"
     }
