--- a/_ControllerFirmware/prj.conf
+++ b/_ControllerFirmware/prj.conf
@@ -84,8 +84,8 @@ CONFIG_BT_PRIVACY=y
 CONFIG_BT_MAX_PAIRED=5
 
 #POWER
-#CONFIG_PM_DEVICE=y
+CONFIG_PM_DEVICE=y
 CONFIG_CRC=y
-#CONFIG_POWEROFF=y
+CONFIG_POWEROFF=y
 
 
