Revert "uploading unkown stash"
This reverts commit 6120b71af1dbd9c259f19d39c2f2662de9dc6992.

--- a/_ControllerFirmware/.vscode/settings.json
+++ b/_ControllerFirmware/.vscode/settings.json
@@ -1,7 +1,5 @@
 {
-    "nrf-connect.applications": [
-        "${workspaceFolder}"
-    ],
+    "nrf-connect.applications": [],
     "files.associations": {
         "dclk.h": "c"
     }
