--- a/_ControllerFirmware/prj.conf
+++ b/_ControllerFirmware/prj.conf
@@ -6,9 +6,9 @@
 
 #DISABLED
 
-CONFIG_ADC=y
+CONFIG_ADC=n
 CONFIG_SPI=n
-CONFIG_DEBUG=y
+CONFIG_DEBUG=n
 
 #DISPLAY
 
@@ -44,13 +44,13 @@ CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=2048
 
 
 # Logger module
-CONFIG_LOG=y
+CONFIG_LOG=n
 
 # BUTTONS and GPIO
 CONFIG_GPIO=y
 
 CONFIG_PWM=y
-CONFIG_PWM_LOG_LEVEL_DBG=y
+CONFIG_PWM_LOG_LEVEL_DBG=n
 
 
 # Bluetooth LE
