--- a/_RemoteFirmware/prj.conf
+++ b/_RemoteFirmware/prj.conf
@@ -8,3 +8,6 @@ CONFIG_BT_BAS=y
 CONFIG_BT_HRS=n
 CONFIG_BT_DEVICE_NAME="DCLK32"
 CONFIG_BT_DEVICE_APPEARANCE=833
+
+# CONFIG_SETTINGS=y
+# CONFIG_BT_SETTINGS=y
