--- a/_RemoteFirmware/prj.conf
+++ b/_RemoteFirmware/prj.conf
@@ -9,5 +9,9 @@ CONFIG_BT_HRS=n
 CONFIG_BT_DEVICE_NAME="DCLK32"
 CONFIG_BT_DEVICE_APPEARANCE=833
 
-# CONFIG_SETTINGS=y
-# CONFIG_BT_SETTINGS=y
+CONFIG_SETTINGS=y
+CONFIG_BT_SETTINGS=y
+CONFIG_FLASH=y
+CONFIG_FLASH_PAGE_LAYOUT=y
+CONFIG_FLASH_MAP=y
+CONFIG_NVS=y
