--- a/_RemoteFirmware/prj.conf
+++ b/_RemoteFirmware/prj.conf
@@ -8,6 +8,11 @@ CONFIG_BT_BAS=y
 CONFIG_BT_HRS=n
 CONFIG_BT_DEVICE_NAME="DCLK32"
 CONFIG_BT_DEVICE_APPEARANCE=833
+CONFIG_BT_MAX_CONN=2
+
+CONFIG_BT_BONDING_REQUIRED=y
+
+CONFIG_PRINTK=y
 
 CONFIG_SETTINGS=y
 CONFIG_BT_SETTINGS=y
