--- a/_RemoteFirmware/prj.conf
+++ b/_RemoteFirmware/prj.conf
@@ -1,3 +1,14 @@
+#Logging
+CONFIG_PRINTK=y
+CONFIG_LOG=y
+CONFIG_CONSOLE=y
+CONFIG_RTT_CONSOLE=y
+CONFIG_USE_SEGGER_RTT=y
+CONFIG_LOG_BACKEND_RTT=y
+CONFIG_LOG_PRINTK=y
+
+
+
 CONFIG_BT=y
 CONFIG_BT_DEBUG_LOG=y
 CONFIG_BT_SMP=y
@@ -11,14 +22,10 @@ CONFIG_BT_DEVICE_APPEARANCE=833
 CONFIG_BT_MAX_CONN=2
 
 CONFIG_BT_BONDING_REQUIRED=y
+CONFIG_BT_WHITELIST=y
+CONFIG_BT_PRIVACY=y
 
-CONFIG_PRINTK=y
-CONFIG_LOG=y
-CONFIG_CONSOLE=y
-CONFIG_RTT_CONSOLE=y
-CONFIG_USE_SEGGER_RTT=y
-CONFIG_LOG_BACKEND_RTT=y
-CONFIG_LOG_PRINTK=y
+
 
 
 CONFIG_SETTINGS=y
