--- a/_RemoteFirmware/prj.conf
+++ b/_RemoteFirmware/prj.conf
@@ -1,5 +1,7 @@
+
+CONFIG_GPIO=y
 #Logging
-CONFIG_PRINTK=y
+CONFIG_PRINTK=n
 CONFIG_LOG=y
 CONFIG_CONSOLE=y
 CONFIG_RTT_CONSOLE=y
@@ -8,7 +10,7 @@ CONFIG_LOG_BACKEND_RTT=y
 CONFIG_LOG_PRINTK=y
 
 
-
+#BLE
 CONFIG_BT=y
 CONFIG_BT_DEBUG_LOG=y
 CONFIG_BT_SMP=y
@@ -19,15 +21,23 @@ CONFIG_BT_BAS=y
 CONFIG_BT_HRS=n
 CONFIG_BT_DEVICE_NAME="DCLK32"
 CONFIG_BT_DEVICE_APPEARANCE=833
-CONFIG_BT_MAX_CONN=2
+CONFIG_BT_MAX_CONN=5
 
 CONFIG_BT_BONDING_REQUIRED=y
+# CONFIG_BT_CTLR_ADV_EXT=y
 CONFIG_BT_WHITELIST=y
 CONFIG_BT_PRIVACY=y
 
 
+#Preferences
 
+CONFIG_BT_PERIPHERAL_PREF_MIN_INT=400
+CONFIG_BT_PERIPHERAL_PREF_MAX_INT=400
+CONFIG_BT_PERIPHERAL_PREF_SLAVE_LATENCY=2
+CONFIG_BT_PERIPHERAL_PREF_TIMEOUT=400
+CONFIG_BT_GAP_AUTO_UPDATE_CONN_PARAMS=y
 
+#Setting
 CONFIG_SETTINGS=y
 CONFIG_BT_SETTINGS=y
 CONFIG_FLASH=y
